--- a/frontend/assets/css/header.css
+++ b/frontend/assets/css/header.css
@@ -5,7 +5,7 @@
 
 .gh-tag-nav-container {
     @apply
-    flex flex-row gap-x-1
+    flex flex-row gap-x-1 flex-wrap sm:flex-nowrap
     items-center justify-center w-full lg:w-min
 }
 
